--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "predis/predis": "^2.3"
+        "predis/predis": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
