--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,12 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.3",
+        "laravel/scout": "^10.12",
         "laravel/tinker": "^2.8",
+        "meilisearch/meilisearch-php": "^1.12",
         "predis/predis": "*"
     },
     "require-dev": {
@@ -61,7 +64,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
